5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1670_2967.log
== TEST (2019-04-16 18:12:35) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 or y>1.37)
-- ERROR:
File "XXXX", line 3
    if(x>1.37 or y>1.37)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:12:39) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 and y>1.37)
-- ERROR:
File "XXXX", line 3
    if(x>1.37 and y>1.37)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:12:46) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 or y>1.37):
-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:07) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 and y>1.37):
	print("Sim")
else:
	if(x>1.37 and y<1.37):
		print("Sim")
	else:
		if(x<1.37 and y>1.37):
			print("Sim")
		else:
			print("Nao")
			
	
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:38) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 and y>1.37):
	print("Sim")
else:
	if(x>1.37 and y<1.37):
		print("Sim")
	else:
		if(x<1.37 and y>1.37):
			print("Sim")
		else:
			print("Nao")

if(x>y):
	print(x)
else:
	print(y)
	
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:43) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 and y>1.37):
	print("Sim")
else:
	if(x>1.37 and y<1.37):
		print("Sim")
	else:
		if(x<1.37 and y>1.37):
			print("Sim")
		else:
			print("Nao")

if(x>y):
	print(x)
else:
	print(y)
	
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:15:49) 
-- CODE:
x=float(input("Digite a sua altura:"))
y=float(input("Digite a altura do seu amigo: "))
if(x>1.37 and y>1.37):
	print("Sim")
else:
	if(x>1.37 and y<1.37):
		print("Sim")
	else:
		if(x<1.37 and y>1.37):
			print("Sim")
		else:
			print("Nao")

if(x>y):
	print(x)
else:
	print(y)
	
-- EXECUTION TIME:
0.123505
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
